--- a/pkg/qbit/server/templates/layout.html
+++ b/pkg/qbit/server/templates/layout.html
@@ -87,6 +87,11 @@
                         <i class="bi bi-gear me-1"></i>Config
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logs" target="_blank">
+                        <i class="bi bi-journal me-1"></i>Logs
+                        </a>
+                    </li>
                 </ul>
                 <div class="d-flex align-items-center">
                     <span class="badge me-2" id="channel-badge">Loading...</span>
