--- a/pkg/qbit/server/templates/layout.html
+++ b/pkg/qbit/server/templates/layout.html
@@ -112,6 +112,11 @@
     {{ template "repair" . }}
     {{ else if eq .Page "config" }}
     {{ template "config" . }}
+    {{ else if eq .Page "login" }}
+    {{ template "login" . }}
+    {{ else if eq .Page "setup" }}
+    {{ template "setup" . }}
+    {{ else }}
     {{ end }}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
